Free Play Knocker sound fixes for all System 6 games/variants:
 Algar
 Alien Poker
 Blackout
 Firepower
 Flash
 Gorgar
 Laser Ball
 Scorpion
 Time Warp
 Tri Zone

Airborne Avenger (Free Play)
Ali (7-digit conversion Free Play rev. 76), (7-Digit conversion Free Play rev. 85)
American Country (ACDC MOD)
Atarians (Free Play)
Attack From Mars (0.3 with 0.6 Sound Prototype)
Bad Girls (alternate set)
Baywatch 3.00 (German)
Beavis and Butt-Head (Class of 1812 MOD)
Big Game (MOD rev. 12)
Black Knight L-2
Bugs Bunny's Birthday Ball LG-2 (German)
Cheetah (Prototype Sounds + MOD 84)
Cue Ball Wizard (older display rev.)
Devil Riders (French speech, Free Play)
Devil's Dare (Sound & Speech alternate set)
Diner LG-2 (German)
Dracula (One Ball MOD)
Dragonfist (MOD 15), (MOD 16)
Earth, Wind & Fire (Free Play), (alternate sound)
Elvira and the Party Monsters LG-3 (German) (incomplete dump)
Elvis 1.00
Farfalla (French Speech), (alternate, incl. Italian/French/German Speech versions)
Fire Mountain (Free Play)
Flipper Football 1.03
Frankenstein 1.03 (Italian)
Future World (Free Play)
Galaxy (7-Digit conversion, Fixes & modified rules)
Grand Lizard L-1
Hook 4.01 (French), 4.00 (incomplete dumps)
Hot Wheels (Free Play)
House of Diamonds (Free Play)
Jungle Lord (new tricks) L-2beta, L-2 & L-3beta (MOD)
La Rana (alternate set)
Last Action Hero 1.08 Spanish with Display 1.05 (not working correctly :/)
Lightning (Free Play & MOD rev. 25)
Locomotion (Free Play)
Metallica 0.52
Mexico 86 (Italian Speech)
Middle Earth (Free Play)
Mr. & Mrs. Pac-Man Pinball (alternate version)
Odin (Prototype)
Pinball Champ (French Speech)
Pin-Bot J-2, J-3 (PEMBOT (no relation)) (MOD)
Pentacup (rev. T)
Pool Champion (Italian Speech, Free Play) (incomplete dump)
Quicksilver (Free Play & modified rules rev. 8.1)
Rollergames LA-1
Royal Flush Deluxe rev. 1
Scared Stiff 1.1, 1.1 with Sound 1.0
Seawitch (MOD rev. 9), (MOD rev. 9.3)
Secret Service 4.0 Europe