@@ -1284,7 +1284,8 @@ DRIVER  (bmf,ch)        //             07/95 Batman Forever (Swiss)
 DRIVER  (bmf,cn)        //             07/95 Batman Forever (Canadian)
 DRIVER  (bmf,de)        //             07/95 Batman Forever (German)
 DRIVER  (bmf,fr)        //             07/95 Batman Forever (French)
-DRIVER  (bmf,nl)        //             07/95 Batman Forever (Dutch)
+DRIVER  (bmf,nl)        //             11/95 Batman Forever (4.0 Dutch)
+DRIVER  (bmf,nl302)     //             08/95 Batman Forever (3.02 Dutch)
 DRIVER  (bmf,it)        //             07/95 Batman Forever (Italian)
 DRIVER  (bmf,sp)        //             07/95 Batman Forever (Spanish)
 DRIVER  (bmf,no)        //             07/95 Batman Forever (Norwegian)
