@@ -155,6 +155,7 @@ American Country (ACDC MOD)
 Atarians (Free Play)
 Attack From Mars (0.3 with 0.6 Sound Prototype)
 Bad Girls (alternate set)
+Batman Forever (3.02 Dutch, unfortunately without matching display ROMs)
 Baywatch 3.00 (German)
 Beavis and Butt-Head (Class of 1812 MOD)
 Big Game (MOD rev. 12)
